# fingerprint-localization

./: CMakeLists.txt  LICENSE  Readme.md  nodelet_plugins.xml  package.xml
cfg/: pole_detection.cfg  pole_position_correction.cfg  pole_recognition.cfg
include/: SimplePoleDetector.h
include/pole_recognition/: Recognizer.h
include/position_correction_publisher/: position_correction_publisher.h
include/velodyne_pointcloud/: point_types.h
launch/localization/: Feature_fingerprint_localization.launch
msg/: Pole.msg  PoleMatch.msg  PoleMatchArray.msg
scripts/: calculateCorners.py  db_creation  fingerprintCalculator.py  visualize_fingerprints.py
src/: SimplePoleDetector.cpp  main.cpp
src/pole_recognition/: Recognizer.cpp  main.cpp
src/position_correction_publisher/: main.cpp  position_correction_publisher.cpp
src/utm_to_map/: utm_map_transform_broadcaster.cpp
